[tool.poetry]
name = "bid"
version = "0.1.0"
description = "env to practice for interviews at X"
authors = ["felgueres <pablofelgueres@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
